Fixed the ugly whitespace

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
   /* justify-content: center; */
   align-items: center;
   background-color: #ffffff;
-  width: 80vw;
+  width: 100vw;
   height: 100vh;
   background-image: url(Grindelwald_IMGP9734_35_Kombi_RGB.jpg);
   background-repeat: no-repeat;
